--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -633,11 +633,11 @@ header nav{
 
 
 .sf-menu > li > a {
-color: #666666 !important;
+color: #FFFFFF !important;
 }
 
 .sf-menu > li > a{
-  color: #666666 !important;;
+  color: #FFFFFF !important;;
 }
 
 
